force-app/main/default/objects/Sales_Rep_Quota__c/Sales_Rep_Quota__c.object-meta.xml
<CustomObject>
    <description>Stores the yearly annual quota of sales reps</description>
    <label>Sales Rep Quota</label>
    <nameField>
        <label>Sales Rep Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Rep Quota</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>