force-app/main/default/objects/Sales_Rep_Quota__c/fields/Annual_Quota_Amount__c.field-meta.xml
<CustomField>
    <fullName>Annual_Quota_Amount__c</fullName>
    <label>Annual Quota Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>